fix archive item spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -212,7 +212,7 @@ div.archive-item time {
 }
 
 div.archive-item p {
-    margin-bottom: 0px;
+    margin: 0.3em;
 }
 
 div.archive-month {
